// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-18lhtms-MuiToolbar-root"
    color="primary"
  />
</div>
`;

exports[`Toolbar ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-18lhtms-MuiToolbar-root"
  />
</div>
`;

exports[`Toolbar ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-18lhtms-MuiToolbar-root"
  />
</div>
`;

exports[`Toolbar ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-18lhtms-MuiToolbar-root"
  />
</div>
`;
